k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bandjoun
  labels:
    app: recensement-bandjoun
    region: ouest-cameroun
