k8s/backend-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green
  namespace: bandjoun
  labels:
    app: backend
    slot: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      slot: green
  template:
    metadata:
      labels:
        app: backend
        slot: green
    spec:
      containers:
        - name: backend
          image: bandjoun/backend:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
