k8s/frontend-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: bandjoun
  labels:
    app: frontend
    slot: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      slot: green
  template:
    metadata:
      labels:
        app: frontend
        slot: green
    spec:
      containers:
        - name: frontend
          image: bandjoun/frontend:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "150m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
