k8s/services-bluegreen.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: bandjoun
spec:
  selector:
    app: backend
    slot: blue
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: bandjoun
spec:
  selector:
    app: frontend
    slot: blue
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
